@@ -2,8 +2,11 @@
 :ufw-user-input - [0:0]
 :ufw-user-output - [0:0]
 :ufw-user-forward - [0:0]
+:ufw-user-limit - [0:0]
 ### RULES ###
 -A ufw-user-input -j RETURN
 -A ufw-user-output -j RETURN
 -A ufw-user-forward -j RETURN
+-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT]: "
+-A ufw-user-limit -j DROP
 COMMIT
