@@ -13,6 +13,10 @@ ufw (0.18) UNRELEASED; urgency=low
     - setup.py: --root works as expected now (eg as DESTDIR in Debian)
     - updated run_test.sh for new setup.py
     - updated README.Debian for now setup.py
+  * add new 'limit' command for connection rate limiting:
+    - updated src/*
+    - updated README and ufw.8
+    - updated messages/ufw.pot
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Thu, 12 Jun 2008 10:28:36 -0400
 
